--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ article {
 	display: inline;
 }
 .mainHeader nav a:link, .mainHeader nav a:visited {
-	color: #000; /*#FFF;*/
+	color: #FFF;
 	display: inline-block;
 	height: 30px;
 	padding: 5px 23px;
