--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ article {
    ===== Main Navigation =====
    =========================== */
 .mainHeader nav {
-	background: #C4C4C4; /*#999;*/ /*#555;*/ /*#282A34;*/
+	background: #999; /*#555;*/ /*#282A34;*/
 	font-size: 1.143em;
 	height: 40px;
 	line-height: 30px;
